kubernetes/apps/observability/headlamp/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: headlamp-to-authentik-server
  namespace: security
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: observability
  to:
    - group: ""
      kind: Service
      name: authentik-server
