kubernetes/apps/observability/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames:
    - "headlamp.${INTERNAL_SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: headlamp
          namespace: observability
          port: 4466
